[package]
name = "clip"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/Sushi-Mampfer/clip"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clippers = "0.1.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
