[package]
name = "clip"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/Sushi-Mampfer/clip"
publish = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clippers = "0.1.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde_json = "1.0.145"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
